moved gh-pages to dev dependencies

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "j-tweet",
+    "homepage": "https://jpreet927.github.io/jtweet",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -11,7 +12,6 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^13.5.0",
         "firebase": "^9.6.11",
-        "gh-pages": "^4.0.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-loading-skeleton": "^3.1.0",
@@ -45,5 +45,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^4.0.0"
     }
 }
